--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     }
   },
   "dependencies": {
+    "@kitware/vtk.js": "^27.1.2",
     "babylonjs": "^5.54.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
