feat: vtk feature and project config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "sourceMap": true,
     // 模块解析
     "baseUrl": "./src",
+    // 路径映射
+    "paths": {
+      "@/*": ["./*"],
+      "@assets/*": ["../assets/*"]
+    },
     // 用于选择模块解析策略
     "moduleResolution": "node",
     // 为导入内容创建命名空间
@@ -27,7 +32,9 @@
     // 允许编译JS
     "allowJs": true,
     // 编译后的文件存到哪个目录下
-    "outDir": ".erb/dll"
+    "outDir": ".erb/dll",
+    // 是否禁止将隐式的 any 类型分配给变量或函数参数
+    "noImplicitAny": false
   },
   "exclude": ["test", "release/build", "release/app/dist", ".erb/dll"]
 }
